--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@500&family=DynaPuff&family=Lobster&family=Oswald:wght@200..700&family=Shadows+Into+Light&display=swap");
+
+body {
+  font-family: "DM Serif Display", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+#info {
+  background-color: lemonchiffon;
+  color: black;
+}
+
 .App {
   text-align: center;
 }
